--- a/app/src/main/res/layout/fragment_imc.xml
+++ b/app/src/main/res/layout/fragment_imc.xml
@@ -105,6 +105,7 @@
                 android:textSize="16sp"
                 android:hint="Sua altura"
                 android:background="#fff"
+                android:inputType="number"
                 android:textColorHint="#808080"
                 android:layout_weight="0.5"
                 android:paddingLeft="10dp"/>
@@ -115,6 +116,7 @@
                 android:layout_height="50dp"
                 android:layout_marginLeft="10dp"
                 android:textSize="16sp"
+                android:inputType="number"
                 android:hint="Seu peso"
                 android:layout_marginRight="16dp"
                 android:textColorHint="#808080"
